apps/dssp-jsp-test-2/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dssp-jsp-test-2
  labels:
    backstage.io/kubernetes-id: dssp-jsp-test-2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dssp-jsp-test-2
  template:
    metadata:
      labels:
        app: dssp-jsp-test-2
        backstage.io/kubernetes-id: dssp-jsp-test-2
    spec:
      containers:
        - name: dssp-jsp-test-2
          image: chaitanyapandeygspann/dssp-jsp-test-2:1.0.1
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
