apps/dssp-jsp-test-2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dssp-jsp-test-2
spec:
  selector:
    app: dssp-jsp-test-2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP


# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: dssp-jsp-test-2-ingress
# spec:
#   ingressClassName: gce
#   rules:
#   - host: dssp-jsp-test-2.example.com
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: dssp-jsp-test-2
#             port:
#               number: 80
